--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#000810">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="ihsan_hamdan_exclusive_icon_1772230449625.png">
     <title>نظام التشخيص الشمولي المطور - الإصدار الحصري</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&family=Amiri:wght@400;700&display=swap"
